docs/irc-server-message-grammar.txt
IRC Server Message Grammar

<irc-message> ::= <message> <payload> | <message>

<message> ::= <sourced-message> | "PING"

<sourced-message> ::= <source> <message-info>

<message-info> ::=
	<numeric-reply> |
	<client-message> |
	<notice> |
	<join-declaration> |
	<mode-declaration

<numeric-reply> ::= <response-code> <name> <params>

<client-message> ::= "PRIVMSG" <channel>

<notice> ::= "NOTICE" "*"

<join-declaration> ::= "JOIN"

<mode-declaration> ::= "MODE" <name>

<payload> ::= ":" <text>

<source> ::= ":" <name>

<channel> ::= REGEX("[&#!+][a-zA-Z0-9.]*")

<name> ::= REGEX("[a-zA-Z0-9!@.]*")

<params> ::= <text>

<text> ::= it's text
